Added average rating over main positions

--- a/FMLeikmenn/Views/Leikmadurs/Index.cshtml
+++ b/FMLeikmenn/Views/Leikmadurs/Index.cshtml
@@ -59,6 +59,277 @@
             </td>
         }
     </tr>
+
+    <tr>
+        <td>
+            @Html.DisplayNameFor(model => model.LiberoSupport)
+        </td>
+        @foreach(var item in Model)
+        {
+            <td>
+                @Html.DisplayFor(model => item.LiberoSupport)
+            </td>
+        }
+    </tr>
+
+    <tr>
+        <td>
+            @Html.DisplayNameFor(model => model.BallPlayingDefender)
+        </td>
+        @foreach (var item in Model)
+        {
+            <td>
+                @Html.DisplayFor(model => item.BallPlayingDefender)
+            </td>
+        }
+    </tr>
+
+    <tr>
+        <td>
+            @Html.DisplayNameFor(model => model.CentralDefender)
+        </td>
+        @foreach (var item in Model)
+        {
+            <td>
+                @Html.DisplayFor(model => item.CentralDefender)
+            </td>
+        }
+    </tr>
+
+    <tr>
+        <td>
+            @Html.DisplayNameFor(model => model.LimitedCentralDefender)
+        </td>
+        @foreach (var item in Model)
+        {
+            <td>
+                @Html.DisplayFor(model => item.LimitedCentralDefender)
+            </td>
+        }
+    </tr>
+
+    <tr>
+        <td>
+            @Html.DisplayNameFor(model => model.CompleteWingBack)
+        </td>
+        @foreach (var item in Model)
+        {
+            <td>
+                @Html.DisplayFor(model => item.CompleteWingBack)
+            </td>
+        }
+    </tr>
+
+    <tr>
+        <td>
+            @Html.DisplayNameFor(model => model.FullBackDefend)
+        </td>
+        @foreach (var item in Model)
+        {
+            <td>
+                @Html.DisplayFor(model => item.FullBackDefend)
+            </td>
+        }
+    </tr>
+
+    <tr>
+        <td>
+            @Html.DisplayNameFor(model => model.FullBackSuport)
+        </td>
+        @foreach (var item in Model)
+        {
+            <td>
+                @Html.DisplayFor(model => item.FullBackSuport)
+            </td>
+        }
+    </tr>
+
+    <tr>
+        <td>
+            @Html.DisplayNameFor(model => model.FullBackAttack)
+        </td>
+        @foreach (var item in Model)
+        {
+            <td>
+                @Html.DisplayFor(model => item.FullBackAttack)
+            </td>
+        }
+    </tr>
+
+    <tr>
+        <td>
+            @Html.DisplayNameFor(model => model.LimitedFullBack)
+        </td>
+        @foreach (var item in Model)
+        {
+            <td>
+                @Html.DisplayFor(model => item.LimitedFullBack)
+            </td>
+        }
+    </tr>
+
+    <tr>
+        <td>
+            @Html.DisplayNameFor(model => model.AnchorManDefend)
+        </td>
+        @foreach (var item in Model)
+        {
+            <td>
+                @Html.DisplayFor(model => item.AnchorManDefend)
+            </td>
+        }
+    </tr>
+
+    <tr>
+        <td>
+            @Html.DisplayNameFor(model => model.BallWinningMidfielder)
+        </td>
+        @foreach (var item in Model)
+        {
+            <td>
+                @Html.DisplayFor(model => item.BallWinningMidfielder)
+            </td>
+        }
+    </tr>
+
+    <tr>
+        <td>
+            @Html.DisplayNameFor(model => model.BoxToBoxMidfielderSupport)
+        </td>
+        @foreach (var item in Model)
+        {
+            <td>
+                @Html.DisplayFor(model => item.BoxToBoxMidfielderSupport)
+            </td>
+        }
+    </tr>
+
+    <tr>
+        <td>
+            @Html.DisplayNameFor(model => model.DeepLyingPlaymakerDefender)
+        </td>
+        @foreach (var item in Model)
+        {
+            <td>
+                @Html.DisplayFor(model => item.DeepLyingPlaymakerDefender)
+            </td>
+        }
+    </tr>
+
+    <tr>
+        <td>
+            @Html.DisplayNameFor(model => model.DeepLyingPlaymakerSupport)
+        </td>
+        @foreach (var item in Model)
+        {
+            <td>
+                @Html.DisplayFor(model => item.DeepLyingPlaymakerSupport)
+            </td>
+        }
+    </tr>
+
+    <tr>
+        <td>
+            @Html.DisplayNameFor(model => model.AdvancedPlaymakerSupport)
+        </td>
+        @foreach (var item in Model)
+        {
+            <td>
+                @Html.DisplayFor(model => item.AdvancedPlaymakerSupport)
+            </td>
+        }
+    </tr>
+
+
+    <tr>
+        <td>
+            @Html.DisplayNameFor(model => model.AdvancedPlaymakerAttack)
+        </td>
+        @foreach (var item in Model)
+        {
+            <td>
+                @Html.DisplayFor(model => item.AdvancedPlaymakerAttack)
+            </td>
+        }
+    </tr>
+    
+    <tr>
+        <td>
+            @Html.DisplayNameFor(model => model.AttackingMidfielderSupport)
+        </td>
+        @foreach (var item in Model)
+        {
+            <td>
+                @Html.DisplayFor(model => item.AttackingMidfielderSupport)
+            </td>
+        }
+    </tr>
+
+
+    <tr>
+        <td>
+            @Html.DisplayNameFor(model => model.AttackingMidfielderAttack)
+        </td>
+        @foreach (var item in Model)
+        {
+            <td>
+                @Html.DisplayFor(model => item.AttackingMidfielderAttack)
+            </td>
+        }
+    </tr>
+
+
+    
+
+
+    <tr>
+        <td>
+            @Html.DisplayNameFor(model => model.WingerSupport)
+        </td>
+        @foreach (var item in Model)
+        {
+            <td>
+                @Html.DisplayFor(model => item.WingerSupport)
+            </td>
+        }
+    </tr>
+
+
+    <tr>
+        <td>
+            @Html.DisplayNameFor(model => model.WingerAttack)
+        </td>
+        @foreach (var item in Model)
+        {
+            <td>
+                @Html.DisplayFor(model => item.WingerAttack)
+            </td>
+        }
+    </tr>
+
+
+
+
+
+
+
+
+
+
+
+
+    <tr>
+        <td>
+            @Html.DisplayNameFor(model => model.PoacherAttributes)
+        </td>
+        @foreach (var item in Model)
+        {
+            <td>
+                @Html.DisplayFor(model => item.PoacherAttributes)
+            </td>
+        }
+    </tr>
+
     <tr>
         <td>
             @Html.DisplayNameFor(model => model.Corners)
