sorting with name or positions

--- a/FMLeikmenn/Views/Leikmadurs/Index.cshtml
+++ b/FMLeikmenn/Views/Leikmadurs/Index.cshtml
@@ -9,6 +9,30 @@
 <p>
     @Html.ActionLink("Create New", "Create")
 </p>
+
+
+@using (Html.BeginForm())
+{
+    <p>
+        Find by name: @Html.TextBox("SearchString")
+        <input type="submit" value="Search" />
+    </p>
+}
+
+<tr>
+    <th>
+        @Html.ActionLink("Name", "Index", new { sortOrder = ViewBag.NameSortParm })
+    </th>
+    <th>
+        
+    </th>
+    <th>
+        @Html.ActionLink("Position", "Index", new { sortOrder = ViewBag.DateSortParm })
+    </th>
+    <th></th>
+</tr>
+
+
 <table class="table">    
     <tr>
         <td>
