seperate search for positions and names, display attributes the right way and small fixes

--- a/FMLeikmenn/Views/Leikmadurs/Delete.cshtml
+++ b/FMLeikmenn/Views/Leikmadurs/Delete.cshtml
@@ -20,6 +20,10 @@
         </dd>
 
         <dt>
+            @Html.DisplayFor(model => model.TeamPlayerContractedTo)
+        </dt>
+
+        <dt>
             @Html.DisplayNameFor(model => model.DateStamp)
         </dt>
 
