--- a/FMLeikmenn/Views/Leikmadurs/Details.cshtml
+++ b/FMLeikmenn/Views/Leikmadurs/Details.cshtml
@@ -17,7 +17,15 @@
         <dd>
             @Html.DisplayFor(model => model.Name)
         </dd>
+        
+        <dt>
+            @Html.DisplayNameFor(model => model.TeamPlayerContractedTo)
+        </dt>
 
+        <dd>
+            @Html.DisplayFor(model => model.TeamPlayerContractedTo)
+        </dd>
+        
         <dt>
             @Html.DisplayNameFor(model => model.DateStamp)
         </dt>
