--- a/FMLeikmenn/Views/Leikmadurs/Index.cshtml
+++ b/FMLeikmenn/Views/Leikmadurs/Index.cshtml
@@ -50,7 +50,47 @@
                 <input type="submit" value="Search" />
             </th>
         </tr>
+        
+        <label>
+            <input type="checkbox" name="pos" value="DC" />
+            <span>DC</span>
+        </label>
+        <label>
+            <input type="checkbox" name="pos" value="DR" />
+            <span>DR</span>
+        </label>
+        <label>
+            <input type="checkbox" name="pos" value="DR" />
+            <span>DR</span>
+        </label>
+        <label>
+            <input type="checkbox" name="pos" value="MC" />
+            <span>MC</span>
+        </label>
+        <label>
+            <input type="checkbox" name="pos" value="AMC" />
+            <span>AMC</span>
+        </label>
+        <label>
+            <input type="checkbox" name="pos" value="AMR" />
+            <span>AMR</span>
+        </label>
+        <label>
+            <input type="checkbox" name="pos" value="AML" />
+            <span>AML</span>
+        </label>
+        <label>
+            <input type="checkbox" name="pos" value="SC" />
+            <span>SC</span>
+        </label>
+        <label>
+            <input type="submit" value="Search" />
+        </label>
     }
+@using (Html.BeginForm())
+{    
+            
+}
 
     <tr>
         <th>
